Style the Search Box

--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 	<title>Reel Browse</title>
-	<style>
-		/* All CSS will go here */
-	</style>
 </head>
 
 <body>
@@ -28,7 +26,8 @@
 		<div class="nav-conter">
 			<div class="search-box">
 				<!--  an SVG magnifying glass icon inside the search input -->
-				<svg class="search-icon" width="16" height="16" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor">
+				<svg class="search-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke-width="2"
+					stroke="currentColor">
 					<circle cx="11" cy="11" r="8"></circle>
 					<line x1="21" y1="21" x2="16.65" y2="16.65" />
 				</svg>
