--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 	<!-- All HTML will go here -->
 	<nav>
+			<!-- an SVG clapperboard icon representing the logo of the website -->
 		<a class="nav-logo" onclick="goHome()">
 			<div class="nav-logo-icon">
-				/* ReelFinder logo SVG */
 				<svg viewBox="0 0 24 24">
 					<path
 						d="M18 4l2 4h-3l-2-4h-2l2 4h-3l-2-4H8l2 4H7L5 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V4h-4z" />
